# USAHealthFoodDataAnalysis

./: .gitignore  README.md  pyproject.toml
airflow/: docker-compose.yaml
airflow/dags/: dags.py  data_quality.py  load_usa_health_data.py  redshift_sql_operator_multiple_statements.py
airflow/dags/sql/: create_county_data.sql  create_county_state_data_table.sql  create_covid_cases_table.sql  create_covid_vaccination_table.sql  create_supplemental_county_data_table.sql  create_supplemental_state_data_table.sql  create_tables.sql  delete_staging_tables.sql  load_county_state_data.sql  (+11 more)
lambda_pivot_health_variables/: Dockerfile  pivot_health_variables.py  requirements.txt
notebooks/: COVID Exploration.ipynb  CreateTableStatements.ipynb  FullExploration.ipynb  Get CSV column names.ipynb  Get variable codes Lambda.ipynb  LambdaDebugging.ipynb  RedshiftSQLOperatorMultipleStatements Development.ipynb  TestDagTask.ipynb  Untitled.ipynb  create_staging_table_template.sql  create_tables.sql  food_environment_atlas_selected_variables.txt  multiple_sql_statements.sql  postgresql_connector.py
scripts/: airflow_down.sh  airflow_up.sh  deploy.sh  destroy.sh  ecr_lambda_image_deploy.sh  ecr_lambda_image_destroy.sh  etl_pipeline_deploy.sh  etl_pipeline_destroy.sh  execute_docker_lambda_locally.sh  push_lambda_docker_image.sh  start_docker_container.sh  terraform_deploy.sh  terraform_destroy.sh
terraform/: .gitignore  inputs.tf  main.tf
terraform/etl_pipeline_infrastructure/: inputs.tf  main.tf  outputs.tf
terraform/lambda_ecr_image/: inputs.tf  main.tf  outputs.tf
(+5 files in other folders)
